# TrenchesFund

./: Cargo.toml  README.md  Rocket.toml  TrenchesFund-Pitch-Deck.odp  deny.toml
backend/: Cargo.toml
backend/src/: db.rs  errors.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  projects.rs  utils.rs
frontend/: Cargo.toml  Dioxus.toml  input.css  tailwind.config.js
frontend/assets/: tailwind.css
frontend/src/: app.rs  dioxus_adapter.rs  header.rs  main.rs  svg_assets.rs  utils.rs
frontend/src/components/: footer.rs  header.rs  mod.rs
frontend/src/views/: dashboard.rs  explore.rs  home.rs  mod.rs  organization.rs  project.rs
public/: index.html
public/assets/: atoll-frontend-087c62fe41b6eb1c.js  atoll-frontend-087c62fe41b6eb1c.js.br  atoll-frontend-8b2506352b40bc64.js  atoll-frontend-8b2506352b40bc64.js.br  atoll-frontend-ba84b7acd47dac32.js  atoll-frontend-ba84b7acd47dac32.js.br  atoll-frontend-e9a9f0790cb203d4.js  atoll-frontend-e9a9f0790cb203d4.js.br  atoll-frontend-ef51c9307c1fb4a4.js  atoll-frontend-ef51c9307c1fb4a4.js.br  atoll-frontend_bg-1e1d24d3d15fe761.wasm  atoll-frontend_bg-1e1d24d3d15fe761.wasm.br  atoll-frontend_bg-4f8846331ca06e04.wasm  atoll-frontend_bg-4f8846331ca06e04.wasm.br  atoll-frontend_bg-5db0c096b890e112.wasm  atoll-frontend_bg-5db0c096b890e112.wasm.br  atoll-frontend_bg-bdc0c1e4f469bd01.wasm  atoll-frontend_bg-bdc0c1e4f469bd01.wasm.br  atoll-frontend_bg-c90034fe8ad69e8e.wasm  atoll-frontend_bg-c90034fe8ad69e8e.wasm.br  favicon-51167ea8955c56fd.png.br  favicon.png.br  icon-37a8d86d91357fed.svg.br  icon.svg.br  tailwind-1d6e780377188d55.css  tailwind-1d6e780377188d55.css.br  tailwind-26fe86fd7cf25374.css  tailwind-26fe86fd7cf25374.css.br  tailwind-61863aaa3c63aba0.css  tailwind-61863aaa3c63aba0.css.br  tailwind-ce0b130af9b98f3b.css  tailwind-ce0b130af9b98f3b.css.br  tailwind.css  tailwind.css.br  trenchesfund-frontend-71de8e6fda293342.js  trenchesfund-frontend-71de8e6fda293342.js.br  trenchesfund-frontend-cd171b0cd3f47961.js  trenchesfund-frontend-cd171b0cd3f47961.js.br  trenchesfund-frontend_bg-5bcd12c040f5d91f.wasm  trenchesfund-frontend_bg-5bcd12c040f5d91f.wasm.br  (+2 more)
