[workspace]
members = ["frontend"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
edition = "2021"
license = "AGPL-3.0"
description = "From The Trenches into the Light"
publish = false

[workspace.dependencies]
bincode = "=1.3.3"
jzon = "0.12.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
