[package]
name = "trenchesfund-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
blake3.workspace = true
ed25519-dalek.workspace = true
bs58.workspace = true
