[package]
name = "trenchesfund-frontend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = ["router"] }

wallet-adapter = "1.1.2"
bincode.workspace = true
jzon.workspace = true
serde_json.workspace = true
serde.workspace = true
gloo-timers = "0.3.0"
solana-transaction-error = { version = "2.1.13", features = ["serde"] }
qrcodegen = "1.8.0"
percent-encoding = "2.3.1"
fastrand = "2.3.0"
trenchesfund-common.workspace = true
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-no-provider",
] }
solana-payments = { git = "https://github.com/JamiiDao/SolanaPayments", rev = "f3e073d" }


[features]
default = ["web"]
web = ["dioxus/web"]
